wk_taa_taaqa/src/objects/APTS_PaymentTerm__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>APTS_Min_Percent_for_Initial_Deposit_AMS__c</fullName>
        <label>Min Percent for Initial Deposit AMS</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FlexPayLowerLimit__c</fullName>
        <label>FlexPayLowerLimit</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IPP4LowerLimit__c</fullName>
        <label>IPP4LowerLimit</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IPP4UpperLimit__c</fullName>
        <label>IPP4UpperLimit</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IPP6LowerLimit__c</fullName>
        <label>IPP6LowerLimit</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Payment Term</label>
</CustomObject>